methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: type green is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.green)
                           ^SlugTracking:5: error: not found: value c
  setCouleurBrosse(c:Color.green)
                   ^