methods.slug.SlugTracking.scala.code
var caseVerte = false

def isFacingTrail():Boolean = {
  setCouleurBrosse(c:Color.green)
  leveBrosse()
  if (estFaceMur()){
    return caseVerte
  } else {
    avance()
    if (getCouleurSol() == Color.green ){
      caseVerte = true
      baisseBrosse()
    }
  }
  return caseVerte
}